sasql/tests/compile_fail/whitespace_only.rs
fn main() {
    let _ = sasql::query!("   \t\n  ");
}
